# disco-diffusion

./: .gitignore  0001-mods-Detect-alpha-frames.patch  0001-mods-Made-turbo-steps-scheduled.patch  0001-mods-Make-initial-modifications.patch  Deforum_Stable_Diffusion.ipynb  deforum_cli.py  disco.py  disco_cli.py  disco_latest.py  disco_utils.py  external_prompts.py  external_settings.py  latest_stable.ipynb  latest_stable.py  original_stable.py  pyproject.toml  settingsExample.txt  shell.nix  stable.py  stable_warpfusion_v0_5_21_6_init_frame_scale_fixes.ipynb  stablestable5.21.py  stablewarp5.24.ipynb  swarp_cli.py  venv.sh  warpstable_latest.ipynb
deforum-stable-diffusion/: .gitignore
deforum-stable-diffusion/helpers/: render.py
